// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank render renders correctly with default props 1`] = `
<div
  className=""
  style={Object {}}
>
  <span
    className=""
  >
     
  </span>
</div>
`;

exports[`Blank render renders correctly with disabled prop as true 1`] = `
<div
  className=""
  style={Object {}}
>
  <span
    className=""
  >
     
  </span>
</div>
`;

exports[`Blank render renders correctly with draggedItem 1`] = `
<div
  className=""
  style={Object {}}
>
  <span
    className=""
  >
     
  </span>
</div>
`;

exports[`Blank render renders correctly with draggedItem and isOver 1`] = `
<div
  className=""
  style={Object {}}
>
  <span
    className="undefined"
  >
     
  </span>
  <span
    className=""
  >
     
  </span>
</div>
`;
